@@ -1,5 +1,5 @@
 N:*:Default
-526
+529
 They say that you can't trust rumors.
 You have no more Black Potions of Death.
 They say that smart guys hang around at 1600'.
@@ -526,3 +526,10 @@ They say that there's some secret slash-commands of great use.
 They say that speed boost beyond a line is not so helpful.
 They say that you should learn not to attack... in some situations.
 They say that elemental rings grants extra protection of corresponding kind.
+Ever activated an elemental ring?
+They say that boomerangs are somewhat fragile, but..
+They say that exploding ammos have million flavors.
+They say that 
+They say that 
+They say that 
+They say that 
